# NetMon-Dist

./: .gitignore  README.md  pyproject.toml  requirements.txt
.obsidian/: workspace.json
RAPPORT/: RAPPORT   DE PROJECT DES SYSTÈMES RÉPARTIS.md
scripts/: lancer_client.py  lancer_serveur.py  suite_benchmark.py  test_charge.py
src/supervision_distribuee/: __init__.py  config.py
src/supervision_distribuee/client/: __init__.py  agent.py  collecteur.py  gestionnaire_services.py
src/supervision_distribuee/common/: __init__.py  journalisation.py  modeles.py  protocole.py  utilitaires.py
src/supervision_distribuee/docs/: architecture.md  protocole.md  resultats_benchmark.md  trame_rapport.md
src/supervision_distribuee/serveur/: __init__.py  base_de_donnees.py  cli.py  depot.py  interface_web.py  registre.py  service.py
src/supervision_distribuee/serveur/templates/: base.html  detail_noeud.html  erreur.html  pannes.html  tableau_de_bord.html
tests/: test_base_de_donnees.py  test_integration.py  test_protocol.py
