[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supervision-distribuee"
version = "1.0.0"
description = "Système distribué de supervision réseau — Projet M1 SRIV"
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.0.0,<7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]